2005-09-11 Karsten Behrmann <BearPerson@sourcemage.org>
	* repository: branch to devel
	* skeleton/etc/sysconfig/*: update from init.d spell and add comments
	* config: kernel version bump to 2.6.13
	* config-2.6.ppc: add ppc config
	* kernel: finally fix bug 9735 - darn double typo

2005-09-10 Karsten Behrmann <BearPerson@sourcemage.org>
	* config-2.6: configure for 2.6.13
	* initrd.files: add find, per request of afrayedknot
	* caster: strip leading /
	* mkinitrd, initrd/sbin/smgl.init, optionalSpell: not use devfs anymore
	* inittab, skeleton/bin/login-shell.sh: proper login shells on tty[2-6]
	* modules/kernel: fix typo in sed expression
	* 30spellInstall: fix bug 9654
	* config, smgl.install, linux.p: work with 2-dot-versions (no patch) too

2005-09-09 Karsten Behrmann <BearPerson@sourcemage.org>
	* diskStructure: beautified code, renamed and prefixed functions,
	  moved functions around, auto-install mdadm when raid is used
	* optionalSpell, mkiso: add version info to optional spell list
	* optionalSpell, iso.dirs: added workaround if we can't unmount bind-
	  mounted $TARGET/dev
	* lilo.conf, grub.conf: temporarily added devfs=nomount
	* integrated new RAID stuff

2005-09-08 Karsten Behrmann <BearPerson@sourcemage.org>
	* 30spellinstall: actually run conflicts
	* optionalSpell: add a few essential devices statically even in udev

2005-09-07 David Kowis <dkowis@sourcemage.org>
	* Integrated the MD functions into the diskStructure file
	* Added some sanity checking to the process
	* Created raidFunctions for expirementation, all those functions can be
	integrated into the diskStructre module
	* Mofified the todo a bit, marking things done and making more notes
	* diskStructure: Fixed bug #9642

2005-09-07 Karsten Behrmann <BearPerson@sourcemage.org>
	* initrd/etc/fstab: add blank to silence warnings (bug #9639)
	* initrd/sbin/smgl.init: lazy unmount /dev - hope to quench devfs errs
	* 30spellinstall: fix broken ldconfig call